add an insertion location to the list

--- a/src/app/information-panel/information-panel.component.html
+++ b/src/app/information-panel/information-panel.component.html
@@ -3,7 +3,7 @@
         <input type="text" class="form-control" id="search" placeholder="Search" [(ngModel)]="userLocationName">
        
         <button type="button" class="btn btn-light btnSpaces" (click)="setLocation()">Search</button>
-        <button type="button" id="addAnnotation" class="btn btn-light">Add annotations</button>
+        <button type="button" id="addAnnotation" class="btn btn-light" (click)="addAnnontation()">Add annotations</button>
 
     </div>
 
