--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,4 @@
-<app-information-panel (name)="search($event)"></app-information-panel>
+<app-information-panel (name)="search($event)" (addLocation)="addAnnontation($event)"></app-information-panel>
 <div class="map mapContainer" id="map"></div>
 
   
