--- a/src/app/location-on-map/location-on-map.component.html
+++ b/src/app/location-on-map/location-on-map.component.html
@@ -1,3 +1,4 @@
-<app-information-panel (name)="setName($event)"></app-information-panel>
-
-<app-map [locationname]="name"></app-map>
+<div fxLayout="row">
+    <app-information-panel fxFlex="25%"></app-information-panel>
+    <app-map fxFlex></app-map>
+</div>
