--- a/src/app/information-panel/information-panel.component.css
+++ b/src/app/information-panel/information-panel.component.css
@@ -1,10 +1,10 @@
 .container {
 display: flex;
-width: 25%;
-margin-left: 1rem;
-margin-top: 1rem;
+/* width: 25%; */
+/* margin-left: 1rem;
+margin-top: 1rem; */
 border: 1px solid;
-padding-top: 1rem;
+/* padding-top: 1rem; */
 }
 
 .btnSpaces {
