--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,14 +1,18 @@
+:host{
+  width: 100%;
+  height: 100vh;
+}
 .mapContainer {
     width: 100%;
     height: 100%;
   }
 
-  #map { 
-      position: absolute;     
-      width: 70%; 
-       margin-top: -23.5rem;
-       margin-left: 24rem;
-    }
-
+#notFound{
+color: red;
+position: absolute;
+width: 100%;
+height: 100%;
+top: 0;
+}
 
  
