--- a/src/app/information-panel/information-panel.component.css
+++ b/src/app/information-panel/information-panel.component.css
@@ -1,5 +1,6 @@
 .container {
 display: flex;
+flex-flow: column nowrap;
 /* width: 25%; */
 /* margin-left: 1rem;
 margin-top: 1rem; */
@@ -14,9 +15,16 @@ border: 1px solid;
     margin-top: 0.3rem;
  }
 
-.list-group {  
-    margin-bottom: 1rem;
-    margin-top: 6rem;
-    margin-left: -13.5rem;
-    width: 13.5rem;
+.btnPosition{
+top: 0.3rem;
+right: 0.3rem;
+}
+
+.borderEle {
+padding-right: 2rem;
+margin-bottom: 0.2rem;
+}
+
+#search{
+    margin-top: 0.3rem;
 }
