fix css hieght of the map and panel

--- a/src/app/location-on-map/location-on-map.component.html
+++ b/src/app/location-on-map/location-on-map.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutGap="0.5rem">
+<div fxLayout="row" fxLayoutGap="0.5rem" class="height">
     <app-information-panel fxFlex="25%"></app-information-panel>
     <app-map fxFlex></app-map>
 </div>
