add scroll to the list

--- a/src/app/information-panel/information-panel.component.html
+++ b/src/app/information-panel/information-panel.component.html
@@ -8,7 +8,7 @@
     <button type="button" id="addAnnotation" class="btn btn-light col" (click)="addAnnontation()">Add annotations</button>
   </div>
 
-  <div class="list-group">
+  <div class="list-group scroll mb-1">
     <button type="button" *ngFor="let item of (locationData | async)" class="list-group-item list-group-item-action position-relative borderEle"
       (click)="userSelected( item)">
       {{item.text}}
