--- a/src/app/information-panel/information-panel.component.css
+++ b/src/app/information-panel/information-panel.component.css
@@ -2,6 +2,7 @@
 display: flex;
 flex-flow: column nowrap;
 border: 1px solid;
+height: 100%;
 }
 
 .btnSpaces {
@@ -23,4 +24,9 @@ margin-bottom: 0.2rem;
 
 #search{
     margin-top: 0.3rem;
+}
+
+.scroll{
+    height: 100%;
+    overflow-y: auto;
 }
