fix the store on search

--- a/src/app/information-panel/information-panel.component.html
+++ b/src/app/information-panel/information-panel.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="my-1 d-flex">
-    <button type="button" class="btn btn-light btnSpaces col" (click)="searchLocation()">Search</button>
+    <button type="button" class="btn btn-light btnSpaces col" id="searchBtn" (click)="searchLocation()">Search</button>
     <button type="button" id="addAnnotation" class="btn btn-light col" (click)="addAnnontation()">Add
       annotations</button>
   </div>
