--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -2,12 +2,12 @@
   width: 100%;
 }
 
-.mapContainer {
+.map-container {
     width: 100%;
     height: 100%;
   }
 
-#notFound{
+#not-found{
 color: red;
 position: absolute;
 width: 100%;
