--- a/src/app/information-panel/information-panel.component.html
+++ b/src/app/information-panel/information-panel.component.html
@@ -4,17 +4,19 @@
   </div>
 
   <div class="my-1 d-flex">
-    <button type="button" class="btn btn-light btnSpaces col" id="searchBtn" (click)="searchLocation()">Search</button>
+    <button type="button" class="btn btn-light btn-spaces col" id="searchBtn" (click)="searchLocation()">Search</button>
     <button type="button" id="addAnnotation" class="btn btn-light col" (click)="addAnnontation()">Add
       annotations</button>
   </div>
 
   <div class="list-group scroll mb-1">
     <button type="button" *ngFor="let item of (locationData | async)"
-      class="list-group-item list-group-item-action position-relative borderEle" (click)="userSelected( item)">
+      class="list-group-item list-group-item-action position-relative border-ele" (click)="userSelected( item)">
       {{item.text}}
 
-      <button class="position-absolute btnPosition" (click)="deleteLocation(item)"> &times;</button>
+      <button class="position-absolute btn-position" (click)="deleteLocation(item)"> &times;</button>
+   
+
     </button>
   </div>
 
