--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,6 +1,6 @@
-<div class="mapContainer" id="map"></div>
+<div class="map-container" id="map"></div>
 
-<div id="notFound" *ngIf="isLocationNotFound">
+<div id="not-found" *ngIf="isLocationNotFound">
     <h2>
         The location {{(searchLocationData | async)?.text}} doesn't exist.
     </h2>
