--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,7 +1,10 @@
 :host{
   width: 100%;
 }
-
+mgl-map {
+  width: 100%;
+  height: 100%;
+}
 .map-container {
     width: 100%;
     height: 100%;
@@ -15,4 +18,3 @@ height: 100%;
 top: 0;
 }
 
- 
