add check if the location doesnt exist

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -3,10 +3,9 @@
   </mgl-marker>
 </mgl-map>
 
-<!-- <div class="map-container" id="map"></div> -->
 
-<!-- <div id="not-found" *ngIf="isLocationNotFound">
+ <div id="not-found" *ngIf="isLocationNotFound">
   <h2>
     The location {{(searchLocationData | async)?.text}} doesn't exist.
   </h2>
-</div> -->
+</div>
