--- a/src/app/information-panel/information-panel.component.html
+++ b/src/app/information-panel/information-panel.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="form-group mb-0 ">
-    <input type="text" class="form-control" id="search" placeholder="Search" [(ngModel)]="userLocationName">
+    <input type="text" class="form-control" id="search" placeholder="Search location" [(ngModel)]="userLocationName">
   </div>
 
   <div class="my-1 d-flex">
