--- a/src/app/information-panel/information-panel.component.css
+++ b/src/app/information-panel/information-panel.component.css
@@ -1,8 +1,15 @@
+/* // $full-screen: 100%;
+
+// $size: (
+//     full-screen: 100%,
+//     radius: 50%
+// ); */
+
 .container {
 display: flex;
 flex-flow: column nowrap;
 border: 1px solid;
-height: 100%;
+height: 100%; 
 }
 
 .btn-spaces {
