--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,4 @@
+
 <mgl-map [zoom]="[7]" [center]="centerMarker" [style]="'mapbox://styles/mapbox/streets-v9'" (load)="mapbox = $event">
   <mgl-marker [lngLat]="centerMarker">
   </mgl-marker>
@@ -6,6 +7,6 @@
 
  <div id="not-found" *ngIf="isLocationNotFound">
   <h2>
-    The location {{(searchLocationData | async)?.text}} doesn't exist.
+    The location {{(searchLocationData$ | async)?.text}} doesn't exist.
   </h2>
 </div>
