--- a/src/app/information-panel/information-panel.component.css
+++ b/src/app/information-panel/information-panel.component.css
@@ -1,46 +1,47 @@
-/* // $full-screen: 100%;
-
-// $size: (
-//     full-screen: 100%,
-//     radius: 50%
-// ); */
-
 .container {
-display: flex;
-flex-flow: column nowrap;
-border: 1px solid;
-height: 100%; 
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  border: 1px solid black;
+  height: 100%;
+}
+
+.container #search {
+  margin-top: 0.3rem;
 }
 
 .btn-spaces {
-    margin-right: 0.2rem;
-}
- .btn {
-    margin-top: 0.3rem;
- }
-
-.btn-position{
-top: 0.3rem;
-right: 0.3rem;
-border-radius: 50%;
-border: 1px solid;
+  margin-right: 0.2rem;
 }
 
-/* 
-.btn-position:hover {
-    background-color: red;
-} */
+.btn {
+  margin-top: 0.3rem;
+}
+
+.btn-position {
+  top: 0.3rem;
+  right: 0.3rem;
+  border-radius: 50%;
+}
+
+@media (max-width: 840px) {
+  #addAnnotation {
+    top: 4rem;
+    left: -4rem;
+  }
+}
 
 .border-ele {
-padding-right: 2.3rem;
-margin-bottom: 0.2rem;
+  padding-right: 2.3rem;
+  margin-bottom: 0.2rem;
 }
 
-#search{
-    margin-top: 0.3rem;
+.scroll {
+  height: 100%;
+  overflow-y: auto;
 }
-
-.scroll{
-    height: 100%;
-    overflow-y: auto;
-}
+/*# sourceMappingURL=information-panel.component.css.map */
