--- a/src/app/location-on-map/location-on-map.component.html
+++ b/src/app/location-on-map/location-on-map.component.html
@@ -1,4 +1,4 @@
 <div fxLayout="row" fxLayoutGap="0.5rem" class="height">
     <app-information-panel fxFlex="25%"></app-information-panel>
-    <app-map fxFlex></app-map>
+    <app-map fxFlex class="laptop"></app-map>
 </div>
