--- a/src/app/information-panel/information-panel.component.css
+++ b/src/app/information-panel/information-panel.component.css
@@ -1,3 +1,10 @@
+@media (max-width: 840px) {
+  :host {
+    height: 50%;
+    width: 100%;
+  }
+}
+
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
