--- a/src/app/information-panel/information-panel.component.html
+++ b/src/app/information-panel/information-panel.component.html
@@ -10,7 +10,7 @@
       annotations</button>
   </div>
   <div class="list-group scroll mb-1">
-    <button type="button" *ngFor="let item of (locationData | async)"
+    <button type="button" *ngFor="let item of (locationData$ | async)"
       class="list-group-item list-group-item-action position-relative border-ele" (click)="userSelected( item)">
       {{item.text}}
       <button class="position-absolute btn btn-sm btn-outline-danger btn-position  far fa-trash-alt"
